添加UI组件，完成部分组件设计

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
-  "cSpell.words": ["Vitesse"],
+  "cSpell.words": [
+    "Unocss",
+    "unplugin",
+    "Vitesse",
+    "vueuse"
+  ],
   "prettier.enable": false,
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
