--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vue/test-utils": "^2.2.7",
     "eslint": "^8.32.0",
     "jsdom": "^21.0.0",
+    "naive-ui": "^2.34.3",
     "pnpm": "^7.25.1",
     "taze": "^0.8.5",
     "typescript": "^4.9.4",
@@ -32,6 +33,7 @@
     "unplugin-auto-import": "^0.12.1",
     "unplugin-vue-components": "^0.22.12",
     "unplugin-vue-macros": "^1.4.2",
+    "vfonts": "^0.0.3",
     "vite": "^4.0.4",
     "vite-plugin-pages": "^0.28.0",
     "vitest": "^0.27.2",
