--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "vite build",
     "dev": "vite --port 3333 --open",
-    "lint": "eslint .",
+    "lint": "eslint . --fix",
     "typecheck": "vue-tsc --noEmit",
     "preview": "vite preview",
     "test": "vitest",
@@ -38,8 +38,5 @@
     "vite-plugin-pages": "^0.28.0",
     "vitest": "^0.27.2",
     "vue-tsc": "^1.0.24"
-  },
-  "eslintConfig": {
-    "extends": "@antfu"
   }
 }
